# NIS-Seq

./: LICENSE  LICENSE.md  README.md
NIS-Seq_image-analysis/: AnalyzeInSituCombined_v1.htm  QuantCorrelation_v1.htm  QuantPhenotype_v2b (max intensity).htm  compensation_matrix_NextSeq2000_jsb-lab_2022.txt  index.htm  readme.txt
NIS-Seq_screening_statistics/: Fig3A_analysis_Nigericin-screen.ipynb
figure1/: NIS_Figure1E.ipynb  NIS_Figure1E_NIS-Seq.ipynb  NIS_Figure1F.ipynb
figure1/NIS-Seq_data/: B16-F1_NuclearIntensities_normal.txt  B16-F1_NuclearSequences_normal.txt  (+21 more)
figure2/: NIS_Figure2A.ipynb  NIS_Figure2D.ipynb
figure3/: NIS_Figure3E.ipynb  data.txt
figure6/: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  ruff.toml
figure6/models/: MODEL_CARD.md
figure6/nisseq/: config.py
figure6/nisseq/clustering/: __init__.py
figure6/nisseq/embedding/: embeddings.py  umap.py
figure6/nisseq/eval/: __init__.py
figure6/nisseq/model/: dataset.py  model.py  transforms.py
figure6/nisseq/utils/: cli.py  functions.py
figure6/scripts/: clustering.py  compute_embeddings.py  umap_fit.py  umap_transform.py
image_analysis/: AnalyzeInSituCombined_v2.htm  NuclearMapping_Step-1_v3.htm  NuclearMapping_Step-1_v4.htm  NuclearMapping_Step-2_v2.htm  NuclearMapping_Step-2_v3.htm  NuclearMapping_one-Step_v5.htm  NuclearMapping_one-Step_v6.htm  NuclearMatching_v7.htm  NuclearMatching_v8.htm  ObtainCollages_v8.htm  ObtainCollages_v9.htm  QuantCorrelation_v2.htm  QuantPhenotype_v2.htm  QuantPhenotype_v3.htm  index.htm  readme.txt
(+8 files in other folders)
